fix: jitter on mobile, external font import issue

--- a/nextjs-blog/styles/global.css
+++ b/nextjs-blog/styles/global.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.cdnfonts.com/css/mango-grotesque');
 @import "tailwindcss";
 
 :root {
@@ -132,6 +131,134 @@ img {
   src: url('./fonts/CedarvilleCursive-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-Thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-ThinItalic.ttf') format('truetype');
+  font-weight: 100;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-ExtraLight.ttf') format('truetype');
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-LightItalic.ttf') format('truetype');
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-Italic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-MediumItalic.ttf') format('truetype');
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-SemiBoldItalic.ttf') format('truetype');
+  font-weight: 600;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-BoldItalic.ttf') format('truetype');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-ExtraBold.ttf') format('truetype');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-Black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Mango Grotesque';
+  src: url('./fonts/MangoGrotesque-BlackItalic.ttf') format('truetype');
+  font-weight: 900;
+  font-style: italic;
   font-display: swap;
 }
 
@@ -299,4 +426,3 @@ section[data-visible="true"] .fade-in-section {
   animation: sectionFadeIn 0.7s cubic-bezier(0.4, 0, 0.2, 1) forwards;
   opacity: 1;
 }
-
